# fastexpr.rs

./: Cargo.toml  LICENSE  README.md
src/: lexer.rs  lib.rs  parser.rs
src/snapshots/: fastexpr_rs__lexer__tests__arithmetic_operators.snap  fastexpr_rs__lexer__tests__assignment_operators.snap  fastexpr_rs__lexer__tests__binary_numbers.snap  fastexpr_rs__lexer__tests__bitwise_operators.snap  fastexpr_rs__lexer__tests__block_comments.snap  fastexpr_rs__lexer__tests__comparison_operators.snap  fastexpr_rs__lexer__tests__hexadecimal_numbers.snap  fastexpr_rs__lexer__tests__identifiers.snap  fastexpr_rs__lexer__tests__keywords.snap  fastexpr_rs__lexer__tests__line_comments.snap  fastexpr_rs__lexer__tests__logical_operators.snap  fastexpr_rs__lexer__tests__long_strings.snap  fastexpr_rs__lexer__tests__nullish_coalescing_operator.snap  fastexpr_rs__lexer__tests__numbers.snap  fastexpr_rs__lexer__tests__octal_numbers.snap  fastexpr_rs__lexer__tests__other_punctuation.snap  fastexpr_rs__lexer__tests__regexes.snap  fastexpr_rs__lexer__tests__separators.snap  fastexpr_rs__lexer__tests__strings.snap  fastexpr_rs__lexer__tests__templates.snap  fastexpr_rs__lexer__tests__ternary_operator.snap  fastexpr_rs__lexer__tests__unary_operators.snap  fastexpr_rs__lexer__tests__whitespace.snap  fastexpr_rs__parser__tests__additive.snap  fastexpr_rs__parser__tests__arrow.snap  fastexpr_rs__parser__tests__bitwise_and.snap  fastexpr_rs__parser__tests__bitwise_or.snap  fastexpr_rs__parser__tests__bitwise_shift.snap  fastexpr_rs__parser__tests__bitwise_xor.snap  fastexpr_rs__parser__tests__new.snap  (+18 more)
