[package]
name = "fastexpr-rs"
version = "1.0.0"
authors = ["Andrew Peters <anpete@protonmail.com>"]
description = "A tiny, fast Javascript expression parser"
keywords = ["expression", "parser", "javascript", "js", "lexer"]
categories = ["parsing", "algorithms", "web-programming"]
edition = "2021"

[dependencies]
regex = "1.10.5"
num-bigint = "0.4.6"
lazy_static = "1.5.0"
insta = "1.39.0"
unicode-id-start = "1.2.0"
