[package]
name = "fastexpr-rs"
version = "1.0.1"
authors = ["Andrew Peters <anpete@protonmail.com>"]
description = "A tiny, fast Javascript expression parser"
keywords = ["expression", "parser", "javascript", "js", "lexer"]
categories = ["parsing", "algorithms", "web-programming"]
edition = "2021"
license = "MIT"

[dependencies]
num-bigint = "0.4.6"
unicode-id-start = "1.2.0"

[dev-dependencies]
insta = "1.39.0"